@@ -6,9 +6,12 @@ Good luck understanding these notes for myself :) Some of this stuff has already
 [x] JSON output plugin
 [x] bug in verbose output. closing file
 
+add plugin init & close.
+add alexa plugin
 
-add IP plugin <-- can't get IP out of http object
-add geoIP country plugin
+add dmoz plugin
+[x] add IP plugin <-- can't get IP out of http object
+[x] add geoIP country plugin
 
 precompile regular expressions for matching speed
 
