@@ -7,20 +7,33 @@
 
 # Version 0.2
 # removed :name & :certainty
+# Version 0.3
+# Andrew Horton added examples, changed time since epoch match for less false positives with Joomla, added mosvisitor cookie match
+# Aung Khant(http://yehg.net) added description, README.php match, Mambo Admin match
 
 Plugin.define "Mambo" do
 author "Andrew Horton"
-version "0.2"
-description "CMS Mambo.org"
+version "0.3"
+description "Mambo CMS (http://mambo-foundation.org)"
+
+examples %w|http://historycouncilvic.org.au/ http://www.turksandcaicosproperty.com/ http://www.moneydepot.com.au/md/  http://www.fuzzytoad.com/mambo/ http://www.ultimatescrapbooksite.com/ http://wreathsbydesign.com/portal/ http://www.xpec.co.uk/|
 
 matches [
 {:regexp=>/<meta name="Generator" content="Mambo - Copyright 2000 - [0-9]+ Miro International Pty Ltd.  All rights reserved." \/>/},
-
-{:name=>"seconds since epoch in html comment afer </html>",
-:certainty=>25, # joomla 1.0 + mambo have this
-:regexp=>/<\/html>.*(\n)*<!-- [0-9]+.*-->(\n)*\z/}
-
+{:url=>'README.php', :text=>'Mambo is OSI Certified Open Source Software, released under the GNU General Public License' },
+{:url=>'administrator/templates/mambo_admin/templateDetails.xml', :regexp=> /(<name>Mambo Admin<\/name>|<authorUrl>http:\/\/www\.mambo\-foundation\.org<\/authorUrl>)/}
 ]
+
+def passive
+m=[]
+	# joomla 1.0 + mambo have this
+	if @body.scan(/<\/html>.*(\n)*<!-- [0-9]+.*-->(\n)*\z/) and !@body.scan(/joomla/i)
+		m << {:name=>"seconds since epoch in html comment afer </html>",:certainty=>25}
+	end
+
+	m << {:name=>"mosvisitor cookie" } if @meta["set-cookie"] =~ /mosvisitor=[0-9]+/ 
+m
+end
 
 
 # identifying strings
