@@ -1,6 +1,9 @@
 Version 0.4.6 Released ? 2010
 * Added x plugins from Brendan Coles. They are: ClipShare, PhpMesFilms, wpQuiz, phpQuestionnaire, RevSense, linkSpheric, WebspotBlogging, XchangeBoard, SazCart, AirvaeCommerce, Cartweaver, BosClassifieds, zFeeder, CMScout, Ultrastats, Connectix-Boards
 * Added Escenic CMS plugin from Erik Inge Bolsø
+* Added Ruby on Rails and Magento plugins by Andrew Horton
+* Updated Mambo plugin with changes from Andrew Horton and Aung Khant
+* Updated phpBB plugin
 * Changed $ANEMONE_SKIP_REGEX=Regexp.union line to be compatible with Ruby 1.8.6. Thanks to Michal Ambroz
 * Added plugin reporting support for  :model=>, :firmware=>, :modules=>
 * Modified Joomla plugin to use :modules instead of :string, changed certainty of a regexp
@@ -20,9 +23,9 @@ Version 0.4.6 Released ? 2010
 * Added JSON logging. Must have the json ruby gem installed or be using Ruby 1.9
 * Added error logging.
 * Added XML header and footer to XML logs
-* Added Ruby on Rails plugin
 * Bug fix: Escaping the XML log properly for &, <, >, "
 * Changed error message for non resolving hostnames from "undefined method `closed?' for nil:NilClass" to "Cannot resolve hostname"
+* Added ascii whatweb logo
 
 
 Version 0.4.5 Released August 17th 2010
